
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "yuchanns", email = "me@yuchanns.xyz"},
]
dependencies = [
    "langchain>=0.0.178",
    "openai>=0.27.7",
    "google-search-results>=2.4.2",
    "google-api-python-client>=2.86.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
